--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -2,6 +2,8 @@
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">118.67.142.85</domain>
+        <domain includeSubdomains="true">123.142.5.131</domain>
+
     </domain-config>
 </network-security-config>
 
