--- a/app/src/main/res/layout/activity_splice_history.xml
+++ b/app/src/main/res/layout/activity_splice_history.xml
@@ -88,8 +88,17 @@
             android:gravity="center"
             android:layout_gravity="center"/>
 
-    </LinearLayout>
 
+    </LinearLayout>
+    <com.github.mikephil.charting.charts.LineChart
+        android:id="@+id/chart1"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:gravity="center"
+        android:layout_margin="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
