--- a/app/src/main/res/layout/activity_splice_history.xml
+++ b/app/src/main/res/layout/activity_splice_history.xml
@@ -63,18 +63,20 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:weightSum="1"
+        android:layout_height="0dp"
         android:orientation="horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/llMain">
+        app:layout_constraintTop_toBottomOf="@+id/llMain"
+        app:layout_constraintBottom_toTopOf="@+id/chart1">
 
 
         <com.example.fxt.widget.XListView
             android:id="@+id/listView_"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:dividerHeight="1dp"
+            android:divider="@color/main_color"
             android:measureAllChildren="true"
             android:choiceMode="multipleChoice">
 
