--- a/app/src/main/res/layout/activity_serial_name.xml
+++ b/app/src/main/res/layout/activity_serial_name.xml
@@ -80,51 +80,52 @@
 
 
             </LinearLayout>
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentBottom="true"
-            android:layout_below="@+id/llLogin"
-            android:padding="32dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="match_parent"
+                android:layout_below="@+id/llLogin"
+                android:layout_alignParentBottom="true"
+                android:padding="32dp">
 
-                <Button
-                    android:id="@+id/btnUpdateUser"
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:text="Continue"
-                    android:background="@color/purple_700"
-                    android:textAllCaps="false"
-                    android:textColor="@color/white"
-                    android:textSize="16dp"
-                    android:textStyle="bold" />
+                    android:layout_height="wrap_content">
 
-                <TextView
-                    android:id="@+id/tvWeb"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/btnUpdateUser"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginTop="10dp"
-                    android:text="Logout"
-                    android:textColor="@color/base_color" />
+                    <Button
+                        android:id="@+id/btnUpdateUser"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerHorizontal="true"
+                        android:background="@color/purple_700"
+                        android:text="Continue"
+                        android:textAllCaps="false"
+                        android:textColor="@color/white"
+                        android:textSize="16dp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/tvWeb"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/btnUpdateUser"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginTop="10dp"
+                        android:text="Logout"
+                        android:textColor="@color/base_color" />
+                </RelativeLayout>
             </RelativeLayout>
-        </RelativeLayout>
         </RelativeLayout>
     </ScrollView>
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-        android:layout_width="150dp"
+        android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_marginBottom="20dp"
         android:gravity="center"
         android:id="@+id/fab"
-        android:text="M Mode"
+        android:text="Control Mode"
         android:backgroundTint="@color/purple_500"
         android:textColor="@color/white"
         android:textSize="18dp"
