Update Control Mode

--- a/app/src/main/res/layout/activity_fusion_detail.xml
+++ b/app/src/main/res/layout/activity_fusion_detail.xml
@@ -503,6 +503,7 @@
                             android:textColor="@color/black"
                             android:layout_weight="1"
                             android:gravity="right"
+                            android:id="@+id/tvCoreOffset"
                             android:text="Core Offset"/>
 
                         <TextView
