--- a/app/src/main/res/layout/custom_dialog_edit.xml
+++ b/app/src/main/res/layout/custom_dialog_edit.xml
@@ -100,7 +100,7 @@
                 android:layout_height="match_parent"
                 android:drawablePadding="16dp"
                 android:background="@color/white"
-                android:hint="C.Angle"
+                android:hint="Cleaved.Angle"
                 android:inputType="numberDecimal"
                 android:maxLines="1"
                 android:maxLength="5"
@@ -117,11 +117,88 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/llAngle"
+        android:layout_centerHorizontal="true"
+        android:orientation="vertical"
+        android:paddingLeft="32dp"
+        android:paddingRight="32dp"
+        android:id="@+id/llCoreAngle">
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColorHint="@color/base_color">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etCoreAngle"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:drawablePadding="16dp"
+                android:background="@color/white"
+                android:hint="Core.Angle"
+                android:inputType="numberDecimal"
+                android:maxLines="1"
+                android:maxLength="5"
+                android:textColor="@android:color/black"
+                android:textSize="16sp" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColorHint="#96000000"/>
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/llCoreAngle"
+        android:layout_centerHorizontal="true"
+        android:orientation="vertical"
+        android:paddingLeft="32dp"
+        android:paddingRight="32dp"
+        android:id="@+id/llCoreOffset">
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColorHint="@color/base_color">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etCoreOffset"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:drawablePadding="16dp"
+                android:background="@color/white"
+                android:hint="Core.Offset"
+                android:inputType="numberDecimal"
+                android:maxLines="1"
+                android:maxLength="5"
+                android:textColor="@android:color/black"
+                android:textSize="16sp" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColorHint="#96000000"/>
+
+
+    </LinearLayout>
     <TextView
         android:id="@+id/tvVersionTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/llAngle"
+        android:layout_below="@+id/llCoreOffset"
         android:textStyle="bold"
         android:layout_marginLeft="40dp"
         android:layout_marginTop="20dp"
