--- a/app/src/main/res/layout/vw_scroll_view_main.xml
+++ b/app/src/main/res/layout/vw_scroll_view_main.xml
@@ -3,80 +3,100 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="match_parent">
+
     <LinearLayout
+        android:id="@+id/rlTop"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/rlTop"
-        android:padding="40dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="40dp">
+
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:src="@drawable/ic_main_fxt"/>
-         <ImageView
-             android:layout_width="wrap_content"
-             android:layout_height="20dp"
-             android:layout_gravity="center_horizontal"
-             android:src="@drawable/ic_fiberfoxintelligent"/>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:layout_weight="1"
-        android:orientation="horizontal">
-        <RelativeLayout
+            android:src="@drawable/ic_main_fxt" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/ic_fiberfoxintelligent" />
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="180dp"
-            android:id="@+id/rl_splice"
-            android:layout_marginRight="5dp"
-            android:layout_marginBottom="5dp"
-            android:background="@drawable/ic_btn_fusionsplicer"
-            android:layout_weight="1"/>
-        <RelativeLayout
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <RelativeLayout
+                android:id="@+id/rl_splice"
+                android:layout_width="match_parent"
+                android:layout_height="180dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginBottom="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/ic_btn_fusionsplicer" />
+
+            <RelativeLayout
+                android:id="@+id/rl_ofi"
+                android:layout_width="match_parent"
+                android:layout_height="180dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginBottom="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/ic_btn_ofi" />
+
+        </LinearLayout>
+
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="180dp"
-            android:id="@+id/rl_ofi"
-            android:layout_marginLeft="5dp"
-            android:layout_marginBottom="5dp"
-            android:background="@drawable/ic_btn_ofi"
-            android:layout_weight="1"/>
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="horizontal">
 
-    </LinearLayout>
+            <RelativeLayout
+                android:id="@+id/rl_fnms"
+                android:layout_width="match_parent"
+                android:layout_height="180dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginBottom="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/ic_btn_nfc" />
 
+            <RelativeLayout
+                android:id="@+id/rl_otdr"
+                android:layout_width="match_parent"
+                android:layout_height="180dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/ic_btn_otdr" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="horizontal">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="180dp"
-            android:id="@+id/rl_fnms"
-            android:layout_marginRight="5dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginTop="5dp"
-            android:background="@drawable/ic_btn_nfc"
-            android:layout_weight="1"/>
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="180dp"
-            android:id="@+id/rl_otdr"
-            android:layout_marginLeft="5dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginTop="5dp"
-            android:background="@drawable/ic_btn_otdr"
-            android:layout_weight="1"/>
-
-    </LinearLayout>
+        </LinearLayout>
 
         <RelativeLayout
+            android:id="@+id/rl_settings"
             android:layout_width="match_parent"
             android:layout_height="90dp"
-            android:id="@+id/rl_settings"
             android:layout_marginTop="5dp"
-            android:background="@drawable/ic_btn_quickguide"
-            android:layout_weight="0.5"/>
+            android:layout_weight="0.5"
+            android:background="@drawable/ic_btn_quickguide" />
+
+        <TextView
+            android:id="@+id/tvInfo"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_gravity="end"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="10dp"
+            android:text="information"
+            android:textColor="@color/purple_500"
+            android:textSize="16dp"
+            android:textStyle="bold" />
     </LinearLayout>
 </RelativeLayout>
